--- a/notebooks/06_Build_Report.ipynb
+++ b/notebooks/06_Build_Report.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/EarthSystem-Science-Lab/python-basics/blob/main/notebooks/06_Build_Report.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/rsgis2025trupti-wq/python-basics/blob/main/notebooks/06_Build_Report.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -64,12 +64,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "3185bf3a",
       "metadata": {
-        "id": "3185bf3a"
+        "id": "3185bf3a",
+        "outputId": "42a0a6bf-4f71-4e2d-e225-85a481f86706",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 46
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Date of Report Completion (auto):** 11 December 2025"
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ],
       "source": [
         "# This cell automatically prints today's date.\n",
         "from datetime import datetime\n",
@@ -86,17 +103,17 @@
         "id": "10a7698e"
       },
       "source": [
-        "**Name:**  \n",
+        "**Name:**  TRUPTI DNYANESHWAR SUTAR\n",
         "\n",
-        "**Student ID / Roll No.:**  \n",
+        "**Student ID / Roll No.:**  202204978\n",
         "\n",
-        "**Programme:**  \n",
+        "**Programme:**  MSC REMOTE SENSING AND GIS\n",
         "\n",
         "**Course Title:** Applicable for RSG-5026, RSG-5028, RSG-5222\n",
         "\n",
-        "**Semester / Academic Year:**  \n",
+        "**Semester / Academic Year:**  2025-26\n",
         "\n",
-        "**Instructor:** Dr. ___________________  \n",
+        "**Instructor:** Dr.Arjun Adhikar\n",
         "\n",
         "**(If needed) Date of Report Completion (manual override):**  \n"
       ]
@@ -119,15 +136,16 @@
         "\n",
         "| Notebook / Assignment                            | Status (Completed / Partial / Not done) | Comments |\n",
         "|--------------------------------------------------|-----------------------------------------|----------|\n",
-        "| 01 – Python Fundamentals                         |                                         |          |\n",
-        "| 02 – Lists, Loops, and Conditions               |                                         |          |\n",
-        "| 03 – Functions and Plotting                     |                                         |          |\n",
-        "| 04 – Mini Remote Sensing Task (NetCDF + xarray) |                                         |          |\n",
-        "| 05 – Capstone Assignment (01–04)                  |                                         |          |\n",
+        "| 01 – Python Fundamentals                         |           Completed                                      |          |\n",
+        "| 02 – Lists, Loops, and Conditions               |    completed                                     |          |\n",
+        "| 03 – Functions and Plotting                     |    completed                                     |          |\n",
+        "| 04 – Mini Remote Sensing Task (NetCDF + xarray) |        completed                                 |          |\n",
+        "| 05 – Capstone Assignment (01–04)                  |     completed                                    |          |\n",
         "\n",
         "### 2.2 – Short Summary (5–8 sentences)\n",
         "\n",
-        "In your own words, describe what this Python component of the course covered, and how it relates to remote sensing / ocean / atmosphere / climate applications.\n"
+        "In your own words, describe what this Python component of the course covered, and how it relates to remote sensing / ocean / atmosphere / climate applications.\n",
+        "\n"
       ]
     },
     {
@@ -137,7 +155,7 @@
         "id": "0a188eba"
       },
       "source": [
-        "*Write your summary here (5–8 sentences).*"
+        "*Write your summary here (5–8 sentences).*\n"
       ]
     },
     {
@@ -651,6 +669,13 @@
     "colab": {
       "provenance": [],
       "include_colab_link": true
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
     }
   },
   "nbformat": 4,
