--- a/notebooks/06_Build_Report.ipynb
+++ b/notebooks/06_Build_Report.ipynb
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "3185bf3a",
       "metadata": {
         "id": "3185bf3a",
@@ -155,7 +155,9 @@
         "id": "0a188eba"
       },
       "source": [
-        "*Write your summary here (5–8 sentences).*\n"
+        "*Write your summary here (5–8 sentences).*\n",
+        "\n",
+        "The Python part of the course taught us the basic skills we need to start working with scientific data. We learned how to use Google Colab, create variables, do simple maths, and calculate things like averages and correlations. it relates to remote sensing , ocean , atmosphere , climate applications such as sea surface temperature, rainfall, or satellite images—and Python helps us organise, process, and understand that information quickly\n"
       ]
     },
     {
@@ -170,21 +172,16 @@
         "\n",
         "### 3.1 – Key Concepts Learned\n",
         "\n",
-        "Write 4–6 bullet points summarising what you learned in Notebook 01 (variables, operators, basic statistics, etc.).\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "52378422",
-      "metadata": {
-        "id": "52378422"
-      },
-      "source": [
-        "-  \n",
-        "-  \n",
-        "-  \n",
-        "-  \n",
-        "-  \n"
+        "Write 4–6 bullet points summarising what you learned in Notebook 01 (variables, operators, basic statistics, etc.).\n",
+        "\n",
+        "Learned how to create variables and check their types int, float, string.\n",
+        "\n",
+        "learned calculation like +, -, *, /, including decimal\n",
+        "\n",
+        "Used print() and f-strings to show results\n",
+        "\n",
+        "Learned to Calculated mean, median, and mode with Python lists and correlation\n",
+        "between two datasets and interpret positive and negative relationships\n"
       ]
     },
     {
@@ -202,14 +199,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "a1405157",
       "metadata": {
-        "id": "a1405157"
+        "id": "a1405157",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c73d8df8-3f54-4ea6-cbf3-a0652eacc9b3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean SST: 28.3\n",
+            "Median SST: 28.3\n",
+            "Mode SST: 28.3\n"
+          ]
+        }
+      ],
       "source": [
-        "# Example code from Notebook 01 – edit this cell with your code\n"
+        "# Example code from Notebook 01 – edit this cell with your code\n",
+        "import statistics as stats\n",
+        "\n",
+        "\n",
+        "\n",
+        "sst = [28.1, 28.3, 28.3, 27.9, 28.5, 28.7, 28.3]\n",
+        "\n",
+        "mean_sst = stats.mean(sst)\n",
+        "median_sst = stats.median(sst)\n",
+        "mode_sst = stats.mode(sst)\n",
+        "\n",
+        "print(\"Mean SST:\", mean_sst )\n",
+        "print(\"Median SST:\", median_sst)\n",
+        "print(\"Mode SST:\", mode_sst)"
       ]
     },
     {
@@ -221,7 +245,8 @@
       "source": [
         "### 3.3 – Short Reflection (3–4 sentences)\n",
         "\n",
-        "What part of basic Python felt easiest and what part required practice?\n"
+        "What part of basic Python felt easiest and what part required practice?\n",
+        "\n"
       ]
     },
     {
@@ -231,7 +256,7 @@
         "id": "b1b457b2"
       },
       "source": [
-        "*Write your reflection here.*"
+        "I found the basic calculations in Python the easiest because the syntax felt simple and required practice for computing correlation"
       ]
     },
     {
@@ -256,11 +281,11 @@
         "id": "ffce15f9"
       },
       "source": [
-        "-  \n",
-        "-  \n",
-        "-  \n",
-        "-  \n",
-        "-  \n"
+        "-  Lists let us keep many pieces of information together, and we can choose any item by its position\n",
+        "-  Loops help us do something again and again, like checking each item in a list.\n",
+        "-  If-else statements help the program choose what to do, depending on whether something is true or not.\n",
+        "-  A for loop repeats a set of steps for each item in a list.\n",
+        "-  We can use indexes to access items in a list\n"
       ]
     },
     {
@@ -277,18 +302,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "361e1266",
       "metadata": {
-        "id": "361e1266"
+        "id": "361e1266",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f94b377a-58e6-4710-c04a-6aef99119d24"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Day 1: WARM\n",
+            "Day 2: WARM\n",
+            "Day 3: WARM\n",
+            "Day 4: WARM\n",
+            "Day 5: NORMAL\n",
+            "Day 6: WARM\n",
+            "Day 7: WARM\n",
+            "Day 8: WARM\n",
+            "\n",
+            "Counts:\n",
+            "HOT: 0\n",
+            "WARM: 7\n",
+            "NORMAL: 1\n"
+          ]
+        }
+      ],
       "source": [
         "# Recreate your SST classification logic here\n",
         "\n",
         "sst = [28.1, 28.3, 28.4, 28.0, 27.9, 28.5, 28.7, 28.6]\n",
         "\n",
-        "# Write your classification code\n"
+        "# Write your classification code\n",
+        "hot_count = 0\n",
+        "warm_count = 0\n",
+        "normal_count = 0\n",
+        "\n",
+        "for i, item in enumerate(sst):\n",
+        "  if item > 29:\n",
+        "    print(f\"Day {i+1}: HOT\")\n",
+        "    hot_count += 1\n",
+        "  elif 28 <= item <= 29:\n",
+        "    print(f\"Day {i+1}: WARM\")\n",
+        "    warm_count += 1\n",
+        "  else:\n",
+        "    print(f\"Day {i+1}: NORMAL\")\n",
+        "    normal_count += 1\n",
+        "\n",
+        "print(f\"\\nCounts:\")\n",
+        "print(f\"HOT: {hot_count}\")\n",
+        "print(f\"WARM: {warm_count}\")\n",
+        "print(f\"NORMAL: {normal_count}\")\n"
       ]
     },
     {
@@ -310,7 +378,10 @@
         "id": "0c91c5da"
       },
       "source": [
-        "*Write your reflection here.*"
+        "*Write your reflection here.*\n",
+        "\n",
+        "Loops allow scientists to process many data points without writing repetitive code and Conditions help in making decisions based on data.\n",
+        "Together, loops and conditions save time and reduce errors, letting researchers analyze data systematically and consistently.\n"
       ]
     },
     {
